# ai-beta-tester

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  DECISIONS.md  Dockerfile  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  rules.md
.github/workflows/: ci.yml
docs/: ai-beta-tester-prd.md  architecture.md  testing_experts.md
src/ai_beta_tester/: __init__.py  cli.py  orchestrator.py  security.py
src/ai_beta_tester/api/: __init__.py  events.py  main.py
src/ai_beta_tester/experiments/: __init__.py
src/ai_beta_tester/models/: __init__.py  action.py  agent_run.py  finding.py  rubric.py  session.py
src/ai_beta_tester/personalities/: __init__.py  adhd_founder.py  agentic_interface_tester.py  base.py  calm_operator.py  chaos_gremlin.py  feature_explorer.py  hybrid_auditor.py  interactive_explorer.py  methodical_newcomer.py  overloaded_manager.py  privacy_paranoid.py  skeptical_exec_assistant.py  speedrunner.py  technical_exploit.py
src/ai_beta_tester/reporting/: __init__.py  markdown.py  trust_report.py
src/ai_beta_tester/scoring/: aggregate.py  categories.py  penalties.py  score_run.py
src/ai_beta_tester/suites/: __init__.py  base.py
tests/: __init__.py  inspect_sdk.py  verify_phase1.py  verify_phase2.py  verify_tools.py
tests/contract/: test_finding_schema.py
tests/integration/: test_agent_loop_mocked.py
tests/suites/: __init__.py  test_trust_scoring.py
tests/unit/: test_navigation_guard.py  test_orchestrator.py  test_personalities_behavior.py
ui/: next.config.js  package-lock.json  package.json
(+42 files in other folders)
